Refactoring e implementazione grafica